add todo component

--- a/content/blog/todo.mdx
+++ b/content/blog/todo.mdx
@@ -7,18 +7,62 @@ published: true
 author: yrwq
 ---
 
-- [ ] handle animations better
-- [ ] vim motions for navigation
-- [ ] bookmarks with [raindrop](https://raindrop.io/)
-- [ ] shiki syntax hl
-- [ ] og image gen for blog posts
-- [ ] contentlayer mdx
-- [ ] upgrade nextjs & tailwind
-- [ ] blog posts layout
-- [ ] mdx styling
-  - [ ] strikethrough
-  - [ ] code block styling
-  - [ ] table
-  - [ ] todo items
-- [ ] make the whole page unselectable
-- [ ] better bento layout on the main page
+<Todo done={true}>
+    todo items
+</Todo>
+
+<Todo done={true}>
+    handle animations better
+</Todo>
+
+<Todo done={false}>
+    vim motions for navigation
+</Todo>
+
+<Todo done={false}>
+    bookmarks with [raindrop](https://raindrop.io/)
+</Todo>
+
+<Todo done={false}>
+    contentlayer mdx
+</Todo>
+
+<Todo done={false}>
+    og image gen for blog posts
+</Todo>
+
+<Todo done={false}>
+    shiki syntax hl
+</Todo>
+
+<Todo done={false}>
+    upgrade nextjs & tailwind
+</Todo>
+
+<Todo done={false}>
+    blog posts layout
+</Todo>
+
+<Todo done={false}>
+    mdx styling
+</Todo>
+
+<Todo done={false}>
+    strikethrough
+</Todo>
+
+<Todo done={false}>
+    code block styling
+</Todo>
+
+<Todo done={false}>
+    table
+</Todo>
+
+<Todo done={false}>
+    make the whole page unselectable
+</Todo>
+
+<Todo done={false}>
+    better bento layout on the main page
+</Todo>
