update mdx tests

--- a/content/blog/hello-world.mdx
+++ b/content/blog/hello-world.mdx
@@ -55,6 +55,19 @@ fn main() {
 - [x] Task 1
 - [ ] Task 2
 
+<Alert title="alert title" type="info">
+  custom todo component
+</Alert>
+
+<Todo done={true}>
+  done custom todo
+</Todo>
+
+<Todo>
+  todo item
+</Todo>
+
+
 
 ~~This is strikethrough~~
 
